--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pymysql
 openpyxl
 translate
 pillow
-selenium==3.141.0  # 4.0.0 有BUG
+selenium < 4.0.0  # 4.0.0 had BUG
 scrapy-splash
 flask
 flask-cors
