enable pyscrapy.exportpipeline.XlsxExporter

--- a/env.example
+++ b/env.example
@@ -1,11 +1,13 @@
 # DATABASE
 
+# sqlite, mysql, postgresql
 DB_TYPE="sqlite"
 DB_HOST="127.0.0.1"
 DB_PORT=3306
 DB_USER="root"
 DB_PASSWORD="root"
 DB_NAME="stscrapy"
+DB_SCHEMA="public"
 
 HTTP_PROXY="http://127.0.0.1:1080"
 
