UPDATE dbmiddleware exportpipeline aybl

--- a/env.example
+++ b/env.example
@@ -1,12 +1,13 @@
 # DATABASE
 
 # sqlite, mysql, postgresql
-DB_TYPE="sqlite"
+# 仅支持 postgresql 和 mysql
+DB_TYPE="postgresql"
 DB_HOST="127.0.0.1"
-DB_PORT=3306
-DB_USER="root"
-DB_PASSWORD="root"
-DB_NAME="stscrapy"
+DB_PORT=5432
+DB_USER="postgres"
+DB_PASSWORD="postgres"
+DB_NAME="postgres"
 DB_SCHEMA="public"
 
 HTTP_PROXY="http://127.0.0.1:1080"
