--- a/env.example
+++ b/env.example
@@ -13,7 +13,7 @@ DB_SCHEMA="public"
 HTTP_PROXY="http://127.0.0.1:1080"
 
 # "D:\\projects\\golang\\stspider\\runtime\\downloads\\images"
-IMAGES_PATH="runtime/downloads/images"
+# IMAGES_PATH="runtime/downloads/images"
 
 # "D:\\projects\\golang\\stspider\\stspider\\pyscrapy"
-ROOT_PATH=""
+# ROOT_PATH=""
